...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="QSO-hQ-gAB" id="0Qv-O2-uJC"/>
                            <outlet property="delegate" destination="QSO-hQ-gAB" id="1R5-ee-WwC"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Order" id="IHE-8Y-vUf">
                        <barButtonItem key="rightBarButtonItem" title="Submit" id="Gex-Lx-KBg">
                            <connections>
                                <action selector="submitButtonTapped:" destination="QSO-hQ-gAB" id="ctq-3p-rka"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TUK-Ft-SkC">
                                        <rect key="frame" x="0.0" y="86.333333333333314" width="363" height="34.333333333333343"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Dismiss"/>
                                        <connections>
                                            <action selector="dismissButtonClicked:" destination="NHH-ky-jtq" eventType="touchUpInside" id="ZHp-bX-rLI"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
